(library
 (name        gateio)
 (public_name gateio)
 (modules gateio)
 (preprocess (pps ppx_sexp_conv))
 (libraries hex ptime uri ezjsonm ocplib-json-typed))

(library
 (name        gateio_rest)
 (public_name gateio-rest)
 (modules gateio_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
  core
  base64
  digestif.c
  gateio
  ptime
  uri
  ocplib-json-typed
  fastrest))

(library
 (name        gateio_ws)
 (public_name gateio-ws)
 (modules gateio_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries gateio ptime uri ocplib-json-typed))

(library
 (name        gateio_ws_async)
 (public_name gateio-ws-async)
 (modules gateio_ws_async)
 (preprocess (pps ppx_sexp_conv))
 (libraries ezjsonm gateio_ws core async fastws-async))
