(library
 (name        gateio)
 (public_name gateio)
 (modules gateio)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   sexplib
   ptime
   ocplib-json-typed))

(library
 (name        gateio_rest)
 (public_name gateio-rest)
 (modules gateio_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   gateio
   fixtypes
   core
   digestif.c
   ptime
   uri
   ocplib-json-typed
   fastrest))

(library
 (name        gateio_ws)
 (public_name gateio-ws)
 (modules gateio_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   gateio
   fixtypes
   ezjsonm
   sexplib
   ptime
   uri
   ocplib-json-typed))
