(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   gateio-rest
   alcotest-async
   logs-async-reporter))

(executable
 (name compta)
 (modules compta)
 (public_name gateio-compta)
 (package gateio-rest)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   logs-async-reporter
   gateio-rest
   kx-async))

; (executable
;  (name ws)
;  (modules ws)
;  (public_name kraken-ws-cli)
;  (package kraken-ws-async)
;  (preprocess (pps ppx_jane ppx_sexp_conv))
;  (libraries
;    logs-async-reporter
;    kraken-ws
;    kraken-ws-async))
