(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   gateio-rest
   alcotest
   alcotest-async
   logs-async-reporter))

(executable
 (name compta)
 (modules compta)
 (public_name gateio-compta)
 (package gateio-bin)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   logs-async-reporter
   gateio-rest
   kx-async))

(executable
 (name ws)
 (modules ws)
 (public_name gateio-ws-cli)
 (package gateio-bin)
 (preprocess (pps ppx_jane ppx_sexp_conv))
 (libraries
   core
   async
   fastws-async
   logs-async
   logs-async-reporter
   gateio-ws))
